fixed positions and text alignment but the scrolling doesn't work

--- a/main.css
+++ b/main.css
@@ -3,13 +3,17 @@
 	color: black;
 	background-color: #beige;
 	margin: 20px 10px 20px 10px;
-
 	box-sizing: border-box;
+}
+
+header {
+	text-align: center;
+	width: 100%;
 }
 
 /*@ regular sizing*/
 section {
-	position: top;
+	position: fixed;
 	float: left;
 	width: 50%;
 	padding: 15px;
@@ -17,7 +21,7 @@ section {
 }
 
 main {
-	position: top;
+	position: fixed;
 	float: right;
 	width: 50%;
 	padding: 15px;	
